--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "pino": "^8.15.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
@@ -29,6 +31,8 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.10.5",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "eslint": "^8.56.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
